# SolverSuite

./: .gitignore  README.md  compile_flags.txt  docs.txt
benchmark/: CMakeLists.txt  bm_utils.hpp  contianer_access.b.cpp  contianer_creation.b.cpp  rk_classic_nbody.b.cpp  rk_classic_nbody.b.perf.cpp  rk_classic_nbody_buffer_layout.b.cpp  rk_classic_nbody_dbuf_svec.b.cpp  test.b.cpp
examples/: CMakeLists.txt  dvec_alloc.e.cpp  dvec_alloc.t.cpp  dvec_sbuf_alloc.e.cpp  dvec_sbuf_alloc.t.cpp  error_comparison_sin.e.plt.cpp  expl_euler_sin.e.plt.cpp  expl_euler_sin.t.plt.cpp  expl_euler_sin_dvec.e.plt.cpp  expl_euler_sin_dvec.t.plt.cpp  rk45_nbody_static_buffer.e.plt.cpp  rk_classic_nbody_AoS.e.plt.cpp  rk_classic_nbody_SoA.e.plt.cpp  rk_classic_nbody_dbuf_svec.e.plt.cpp  rk_classic_nbody_dynamic_length_buffer.e.plt.cpp  rk_classic_nbody_static_buffer.e.plt.cpp  rk_classic_sin_dvec.e.plt.cpp  rk_classic_sin_dvec.t.plt.cpp  rk_raltson_sin_dvec.e.plt.cpp  rk_raltson_sin_dvec.t.plt.cpp  svec.e.cpp  svec.t.cpp  svec_dbuf_alloc.e.cpp  svec_dbuf_alloc.t.cpp
solver_suite/: ideas.txt
solver_suite/Allocators/: allocator_concepts.hpp  allocator_wrapper.hpp  bad_stack_allocator.hpp  monotonic_allocator.hpp  stack_allocator.hpp
solver_suite/DataTypes/: buffer_config.hpp  data_buffer.hpp  data_type_concepts.hpp  data_type_traits.hpp  data_type_utils.hpp  dynamic_array.hpp  dynamic_container_operations.hpp  dynamic_vector.hpp  eager_container_operations.hpp  ideas.txt  lazy_container_operations.hpp  operation_utils.hpp  static_array.hpp  static_container_operations.hpp  static_vector.hpp
solver_suite/Memory/: buffer_concepts.hpp  buffer_config.hpp  buffer_interface.hpp  buffer_size.hpp  buffer_traits.hpp  buffer_utils.hpp  mem_buf_main.cpp  memory_buffer_concepts.hpp  memory_buffer_utils.hpp  memory_buffers.hpp  memory_storage.hpp  merged_buffer_interface.hpp  old_memory_buffers.hpp  physical_buffers.hpp  uniform_multibuffer.hpp  virtual_buffers.hpp
solver_suite/Plotting/: plotting_base.hpp  plotting_common.hpp  scatter_plot_2D.cpp  scatter_plot_2D.hpp  scatter_plot_3D.cpp  scatter_plot_3D.hpp  series_plot_2D.cpp  series_plot_2D.hpp  time_plot_2D.cpp  time_plot_2D.hpp
solver_suite/Solvers/: explicit_euler.hpp  explicit_generic_embedded_runge_kutta.hpp  explicit_generic_runge_kutta.hpp  explicit_stepper_base.hpp  generic_runge_kutta.hpp  ideas.txt  runge_kutta_params.hpp
solver_suite/Utility/: compile_time_utility.hpp  composable_function.hpp  concepts.hpp  constexpr_functions.hpp  debug_allocators.hpp  generics.hpp  logging.hpp  operations.hpp  random.hpp  random_distributions.hpp  stopwatch.hpp
tests/: CMakeLists.txt  vector_operations_test.t.cpp
